--- a/assets/main.css
+++ b/assets/main.css
@@ -67,3 +67,27 @@ footer div {
 footer a {
     color: #024e76;
 }
+
+section {
+    padding: 60px;
+    
+  }
+
+.hero {
+    background-image: url("../assets/images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover; /* Makes the image not cut off, uses full size image to cover page*/
+    background-position: center;
+    position: relative;
+}
+
+.hero-form {
+    color: #024e76;
+    background-color: #fce138;
+    width: 500px;
+    padding: 20px;
+    border: 3px solid #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+}
