--- a/assets/main.css
+++ b/assets/main.css
@@ -145,3 +145,18 @@ section {
     font-size: 20px;
     margin: 0 auto;
 }
+
+.steps {
+    text-align: center;
+    background-color: #fce138;
+}
+
+.steps h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #39a6b2;
+    display: inline-block;
+  }
