--- a/assets/main.css
+++ b/assets/main.css
@@ -128,15 +128,8 @@ section {
 .intro {
     text-align: center;
 }
-.intro h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-    display: inline-block; /* this makes your underline border only go as far as the title itself by following its parent style parameters.*/
-}
+
+
 
 .intro p {
     line-height: 1.7;
@@ -151,12 +144,46 @@ section {
     background-color: #fce138;
 }
 
-.steps h2 {
+
+  .section-title {
     font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #39a6b2;
     display: inline-block;
+    border-bottom: 3px solid;
+  }
+  
+  .primary-border {
+    border-color: #fce138;
+  }
+  
+  .secondary-border {
+    border-color: #39a6b2;
+  }
+
+  .steps div {
+      margin-bottom: 80px;
+
+  }
+
+  .steps img {
+      width: 15%;
+      margin: 10px 0;
+
+  }
+
+  .steps h3 {
+      color: #024e76;
+      font-size: 46px;
+      margin-top: 10px;
+  }
+
+  .steps p {
+      color: #39a6b2;
+      font-size: 23px;
+  }
+
+  .steps span {
+    font-size: 38px;
   }
